# PointMaker

./: Board.cpp  Board.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Shapes/: Circle.cpp  Circle.h  Rectangular.cpp  Rectangular.h  Shape.cpp  Shape.h  Square.cpp  Square.h
